--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,18 @@
 @import "../src/common/colors.scss";
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
-
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    background: $primary-color;
+  background: $primary-color;
 }
-
 .container {
-    margin: 0px 40px;
+  margin: 0px 40px;
 }
