--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,11 +1,10 @@
 @import "../../common/colors.scss";
-
 .footer {
-    background-color: $secondary-color;
-    height: 72px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: $font-primary;
-    flex-direction: column;
+  background: $secondary-color;
+  height: 72px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $font-primary;
+  flex-direction: column;
 }
